--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Demo</title>
   </head>
   <body>
-    <h1>Demo Website - Hello World - Hehe</h1>
+    <h1>Bảo trì</h1>
   </body>
 </html>
